# ResumeScan

./: .gitignore  Dockerfile  LICENSE  README.md  interactive.prp  main.py  project.md  project.prp  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
app/: agents.py  ai_provider.py  graph.py  parser.py  processor.py  utils.py
compose/: .env.example  docker-compose.yaml
db/: connection.py  cv_storage.py  models.py
documents/JD/: DE.md
prompts/: prompt_example.md
schema/agent_outputs/: experience.py  jd_analysis.py  resume_analysis.py
scripts/: setup_mongodb.py  test_mongodb.py
